# MindMapper

./: CMakeLists.txt  README.md  main.cpp
include/: MindMapper.h  Stack.h
include/utils/: Array.h  Serialization.h  String.h
src/: MindMapper.cpp  Stack.cpp
src/utils/: String.cpp
